--- a/1.md
+++ b/1.md
@@ -49,16 +49,16 @@
 - Для проверки корректности настройки, разорвите один из кабелей между одним из маршрутизаторов и Switch0 и запустите ping между PC0 и Server0.
 - На проверку отправьте получившуюся схему в формате pkt и скриншот, где виден процесс настройки маршрутизатора.
 
-  <details>
-
-    <summary>
+<details>
+  <summary>
 
 ### Выполнение задания 
 
-    </summary>
+  </summary>
+
+jkjjkjk
 
   </details>
-
 </details>
 
 ------
