--- a/1.md
+++ b/1.md
@@ -76,6 +76,16 @@ jkjjkjk
 - Настройте Keepalived так, чтобы он запускал данный скрипт каждые 3 секунды и переносил виртуальный IP на другой сервер, если bash-скрипт завершался с кодом, отличным от нуля (то есть порт веб-сервера был недоступен или отсутствовал index.html). Используйте для этого секцию vrrp_script
 - На проверку отправьте получившейся bash-скрипт и конфигурационный файл keepalived, а также скриншот с демонстрацией переезда плавающего ip на другой сервер в случае недоступности порта или файла index.html
 
+<details>
+  <summary>
+
+### Выполнение задания 
+
+  </summary>
+
+jkjjkjk22222222222222
+
+  </details>
 </details>
 
 ------
