--- a/1.md
+++ b/1.md
@@ -90,7 +90,12 @@ jkjjkjk22222222222222
 
 ------
 
+<details>
+  <summary>
+
 ## Дополнительные задания со звёздочкой*
+
+  </summary>
 
 Эти задания дополнительные. Их можно не выполнять. На зачёт это не повлияет. Вы можете их выполнить, если хотите глубже разобраться в материале.
  
@@ -102,6 +107,17 @@ jkjjkjk22222222222222
 - Попробуйте выполнить настройку keepalived на третьем сервере и скорректировать при необходимости формулу так, чтобы плавающий ip адрес всегда был прикреплен к серверу, имеющему наименьшую нагрузку.
 - На проверку отправьте получившийся bash-скрипт и конфигурационный файл keepalived, а также скриншоты логов keepalived с серверов при разных нагрузках
 
+<details>
+  <summary>
+
+### Выполнение задания 
+
+  </summary>
+
+3-3-3-3-3-3-3-3
+
+  </details>
+</details>
 
 ------
 
