--- a/1.md
+++ b/1.md
@@ -56,7 +56,30 @@
 
   </summary>
 
-jkjjkjk
+Для проверки работы роутеров запустим пакет icmp
+
+CLI Router1
+
+смотрим конфиг 
+
+```
+en
+sh run
+
+вносим правки:
+  повышаем приоритет, чтобы был больше, чем по умолчанию (100) и при деградации (на 10) стал меньше - 105
+  и включаем preempt
+
+config t
+
+interface interface GigabitEthernet0/1
+standby 1 priority 105
+standby 1 preempt
+
+делаем проверку хождения пакетов, и повторяем проверку хождения пакетов при обрыве любого соединения
+
+![](1/ciscopackertracer.png)
+
 
   </details>
 </details>
