--- a/1.md
+++ b/1.md
@@ -65,20 +65,25 @@ CLI Router1
 ```
 en
 sh run
+```
 
 вносим правки:
   повышаем приоритет, чтобы был больше, чем по умолчанию (100) и при деградации (на 10) стал меньше - 105
   и включаем preempt
 
+```
 config t
 
 interface interface GigabitEthernet0/1
 standby 1 priority 105
 standby 1 preempt
+```
 
 делаем проверку хождения пакетов, и повторяем проверку хождения пакетов при обрыве любого соединения
 
 ![](1/ciscopackertracer.png)
+
+[сохраненный файл с решением](1/hsrp_advanced_(resolved).pkt)
 
 
   </details>
