--- a/1.md
+++ b/1.md
@@ -63,12 +63,16 @@ CLI Router1
 смотрим конфиг 
 
 ```
-en
-sh run
+>en
+#sh run
 ```
 
 вносим правки:
-  повышаем приоритет, чтобы был больше, чем по умолчанию (100) и при деградации (на 10) стал меньше - 105
+
+  повышаем приоритет,
+
+_ чтобы был больше, чем по умолчанию (100) и при деградации (на 10) стал меньше - 105_
+
   и включаем preempt
 
 ```
