--- a/1.md
+++ b/1.md
@@ -71,7 +71,7 @@ CLI Router1
 
   повышаем приоритет,
 
-_ чтобы был больше, чем по умолчанию (100) и при деградации (на 10) стал меньше - 105_
+ *чтобы был больше, чем по умолчанию (100) и при деградации (на 10) стал меньше - 105*
 
   и включаем preempt
 
