--- a/1.md
+++ b/1.md
@@ -69,10 +69,7 @@ CLI Router1
 
 вносим правки:
 
-  повышаем приоритет,
-
- *чтобы был больше, чем по умолчанию (100) и при деградации (на 10) стал меньше - 105*
-
+  повышаем приоритет, *чтобы был больше, чем по умолчанию (100) и при деградации (на 10) стал меньше - 105*
   и включаем preempt
 
 ```
