--- a/1.md
+++ b/1.md
@@ -56,8 +56,6 @@
 
   </summary>
 
-Для проверки работы роутеров запустим пакет icmp
-
 CLI Router1
 
 смотрим конфиг 
@@ -73,7 +71,7 @@ CLI Router1
   и включаем preempt
 
 ```
-config t
+conf t
 
 interface interface GigabitEthernet0/1
 standby 1 priority 105
