--- a/1.md
+++ b/1.md
@@ -110,7 +110,26 @@ standby 1 preempt
 
   </summary>
 
-jkjjkjk22222222222222
+1. Подготовка ВМ и установка NGinx
+
+Для выполнения задания будем использовать ВМ с ASTRA Linux
+
+Для установки nginx можно использовать официальный репозиторий nginx, процесс установки описан в официальной документации nginx и доступен по адресу https://nginx.org/en/linux_packages.html или https://nginx.org/ru/linux_packages.html
+ 
+В нашем случае установка nginx будет осуществляться из репозиториев ОС ASTRA Linux
+
+Процесс установки описан в официальной документации ASTRA Linux https://wiki.astralinux.ru/pages/viewpage.action?pageId=147162407
+
+2. Установка Keepalived
+
+```
+apt update
+
+apt install keepalived
+```
+
+
+
 
   </details>
 </details>
