--- a/1.md
+++ b/1.md
@@ -128,7 +128,98 @@ apt update
 apt install keepalived
 ```
 
+Имеем 2 ВМ:
 
+MASTER ip 192.168.77.141
+BACKUP ip 192.168.77.142
+
+Virtual ip 192.168.77.250
+
+Конфигурационные файлы:
+
+MASTER
+
+```
+/etc/keepalived/keepalived.conf
+
+vrrp_script fileport_check {
+    script "/root/lsof.sh"
+    interval 3
+    user root
+}
+
+vrrp_instance web {
+    state MASTER
+    interface eth0
+    virtual_router_id 15
+    priority 255
+    advert_int 1
+    virtual_ipaddress {
+        192.168.77.250
+    }
+    track_script {
+        fileport_check
+    }
+}
+```
+
+
+BACKUP
+
+```
+/etc/keepalived/keepalived.conf
+
+vrrp_instance web {
+    state BACKUP
+    interface eth0
+    virtual_router_id 15
+    priority 250
+    advert_int 1
+    preempt_delay 30
+    virtual_ipaddress {
+        192.168.77.250
+    }
+}
+```
+
+SCRIPT
+
+```
+#!/bin/bash
+
+if lsof -Pi :80 -sTCP:LISTEN -t >/dev/null ; then
+    echo 0
+else
+    exit 1
+fi
+
+file=/var/www/html/index.nginx-debian.html
+if [ ! -e "$file" ]; then
+    exit 1
+fi
+
+exit 0
+```
+
+### Тесты, проверки
+
+![](1/Screenshot_248.png)
+
+![](1/Screenshot_249.png)
+
+![](1/Screenshot_250.png)
+
+![](1/Screenshot_251.png)
+
+![](1/Screenshot_252.png)
+
+![](1/Screenshot_253.png)
+
+![](1/Screenshot_254.png)
+
+![](1/Screenshot_255.png)
+
+![](1/Screenshot_256.png)
 
 
   </details>
