--- a/1.md
+++ b/1.md
@@ -131,11 +131,12 @@ apt install keepalived
 Имеем 2 ВМ:
 
 MASTER ip 192.168.77.141
+
 BACKUP ip 192.168.77.142
 
 Virtual ip 192.168.77.250
 
-Конфигурационные файлы:
+3. Конфигурационные файлы:
 
 MASTER
 
@@ -226,11 +227,11 @@ exit 0
 </details>
 
 ------
+<!--
 
 <details>
   <summary>
 
-<!--
 
 ## Дополнительные задания со звёздочкой*
 
