--- a/2.md
+++ b/2.md
@@ -42,6 +42,124 @@
 - На проверку направьте конфигурационный файл haproxy, скриншоты, где видно перенаправление запросов на разные серверы при обращении к HAProxy.
 
 
+Выполнение задания
+
+В качестве стенда будем использовать ВМ с установленной ОС Kali Linux, под учетной записью root
+
+Подготовка web серверов с помощью Python'а
+
+1 сервер, с index.html в каталоге /var/www/9001
+
+  порт обращения к серверу - 9001
+
+Содержимое index.html
+
+```
+Welcome to PORT 9001 !
+If you see this page, the web server is successfully working on port 9001.
+```
+команда запуска веб-сервера
+
+```
+  python3 -m http.server 9001 --bind 0.0.0.0 -d /var/www/9001/html/
+```
+
+![scr_webserv1](./2/scr/webserv_1.png)
+
+2 сервер, с index.html в каталоге /var/www/9002
+
+  порт обращения к серверу - 9002
+
+Содержимое index.html
+
+```
+Welcome to PORT 9002 !
+If you see this page, the web server is successfully working on port 9002.
+```
+команда запуска веб-сервера
+
+```
+  python3 -m http.server 9002 --bind 0.0.0.0 -d /var/www/9002/html/
+```
+
+![scr_webserv2](./2/scr/webserv_2.png)
+
+
+убедимся, что наши серверы отвечают на своих портах
+
+```
+ss -tulpn
+```
+
+![ss](./2/scr/ss.png)
+
+а также сделаем обращение с помощью **_curl_** на соответствующие порты по локальному адресу _lo_ и адресу внешнего интерфейса _eth0_
+
+```
+curl 127.0.0.1:9001
+
+curl 192.168.77.118:9001
+```
+
+![requests](./2/scr/requests.png)
+
+ВМ готова.
+
+Устанавливаем **HAproxy**
+
+Устанавливаем HAProxy c конфигурацией [haproxy config](./2/haproxy/haproxy.cfg)
+
+```
+ sudo apt-get install haproxy
+ 
+ sudo nano /etc/haproxy/haproxy.cfg
+  
+```
+
+в секции frontend указываем имя хоста, например, _myweb.com_
+
+```
+frontend myweb  # секция фронтенд
+        mode tcp
+        bind :3306
+        acl ACL_myweb.com hdr(host) -i myweb.com
+        use_backend web_servers if ACL_myweb.com
+
+```
+
+Конфигурация haproxy для балансировки по методу Round-robin на 4 уровне.
+
+```
+backend web_servers    # секция бэкенд
+        mode tcp
+        balance roundrobin
+        server PyWebServ_01 127.0.0.1:9001 check
+        server PyWebServ_02 127.0.0.1:9002 check
+
+```
+
+После внесения изменений в файл конфига _haproxy.cfg_ незабываем перезапустить службу, или перечитать конфиг командой _reload_
+
+```
+systemctl restart haproxy.service
+
+systemctl reload haproxy.service
+```
+
+проверка :
+
+![test](./2/scr/tests.png)
+
+
+Статистика по обращениям через HAproxy
+
+![stats](./2/scr/stats.png)
+
+
+---
+
+
+
 ### Задание 2
 - Запустите три simple python сервера на своей виртуальной машине на разных портах
 - Настройте балансировку Weighted Round Robin на 7 уровне, чтобы первый сервер имел вес 2, второй - 3, а третий - 4
@@ -51,6 +169,8 @@
 
 
 ---
+
+<!--
 
 ## Задания со звёздочкой*
 Эти задания дополнительные. Их можно не выполнять. На зачёт это не повлияет. Вы можете их выполнить, если хотите глубже разобраться в материале.
@@ -72,6 +192,7 @@
 - Настройте фронтенд HAProxy так, чтобы в зависимости от запрашиваемого сайта example1.local или example2.local запросы перенаправлялись на разные бэкенды HAProxy
 - На проверку направьте конфигурационный файл HAProxy, скриншоты, демонстрирующие запросы к разным фронтендам и ответам от разных бэкендов.
 
+-->
 
 ------
 
