--- a/2.md
+++ b/2.md
@@ -116,14 +116,14 @@ curl 192.168.77.118:9001
   
 ```
 
-в секции frontend указываем имя хоста, например, _myweb.com_
+в секции frontend указываем имя хоста, например, _wserv.py_
 
 ```
 frontend myweb  # секция фронтенд
         mode tcp
         bind :3306
-        acl ACL_myweb.com hdr(host) -i myweb.com
-        use_backend web_servers if ACL_myweb.com
+        acl ACL_wserv.py hdr(host) -i wserv.py
+        use_backend web_servers if ACL_wserv.py
 
 ```
 
