--- a/2.md
+++ b/2.md
@@ -105,9 +105,7 @@ curl 192.168.77.118:9001
 
 ВМ готова.
 
-Устанавливаем **HAproxy**
-
-Устанавливаем HAProxy c конфигурацией [haproxy config](./2/haproxy/haproxy.cfg)
+Устанавливаем **HAproxy** c конфигурацией [haproxy config](./2/haproxy/haproxy.cfg)
 
 ```
  sudo apt-get install haproxy
@@ -155,6 +153,7 @@ systemctl reload haproxy.service
 
 ![stats](./2/scr/stats.png)
 
+Конфигурационный файл [**_haproxy.cfg_**](./2/haproxy_1/haproxy.cfg)
 
 ---
 
