--- a/2.md
+++ b/2.md
@@ -166,10 +166,59 @@ systemctl reload haproxy.service
 - На проверку направьте конфигурационный файл haproxy, скриншоты, где видно перенаправление запросов на разные серверы при обращении к HAProxy c использованием домена example.local и без него.
 
 
+---
+
+### Выполнения задания 2
+
+запустим три сервера : 
+
+Server1 порт: 9001
+
+Server1 порт: 9002
+
+Server1 порт: 9003
+
+
+в настройках HAproxy перенастроим  fronted и backend:
+
+для домена "example.local"
+
+```
+frontend example # секция фронтенд
+        bind :8088
+        acl ACL_example.local hdr(host) -i example.local
+        use_backend web_servers_example if ACL_example.local
+```
+
+В секции backend добавим 3ий сервер и настроим веса для каждого сервера
+
+```
+backend web_servers_example    # секция бэкенд
+        mode http
+        balance roundrobin
+        option httpchk
+        http-check send meth GET uri /index.html
+        server PyWebServ2_01 127.0.0.1:9001 check weight 2
+        server PyWebServ2_02 127.0.0.1:9002 check weight 3
+        server PyWebServ2_03 127.0.0.1:9003 check weight 4
+```
+
+
+# _HAproxy Statistics_
+
+![stats_3_servers](./2/scr/stats2.png)
+
+
+Конфигурация HAProxy 
+[**_haproxy.cfg_**](./2/haproxy_2/haproxy.cfg)
+
+
+прверяем: все три сервера участвуют в балансировке
+
+![tests2](./2/scr/tests2.png)
 
 ---
 
-<!--
 
 ## Задания со звёздочкой*
 Эти задания дополнительные. Их можно не выполнять. На зачёт это не повлияет. Вы можете их выполнить, если хотите глубже разобраться в материале.
@@ -181,6 +230,31 @@ systemctl reload haproxy.service
 - Настройте Nginx так, чтобы файлы .jpg выдавались самим Nginx (предварительно разместите несколько тестовых картинок в директории /var/www/), а остальные запросы переадресовывались на HAProxy, который в свою очередь переадресовывал их на два Simple Python server.
 - На проверку направьте конфигурационные файлы nginx, HAProxy, скриншоты с запросами jpg картинок и других файлов на Simple Python Server, демонстрирующие корректную настройку.
 
+Вместо NGinx'а используем форк - Angie
+
+Установка сервера Angie согласно документации с [оф.сайта](https://angie.software/install/#)
+
+создаем пару сайтов на разных портах:
+
+порт 47791
+
+конфиг [47791.conf](./2/angie/47791.conf)
+
+[index.html](./2/angie/47791/html/index.html)
+
+[каталог html](./2/angie/47791/html/)  
+
+порт 47792
+
+конфиг [47792.conf](./2/angie/47792.conf)
+
+[index.html](./2/angie/47792/html/index.html)
+
+[каталог html](./2/angie/47792/html/)
+
+
+Настройка _haproxy_ совмещена с 4 заданием:
+
 ---
 
 ### Задание 4*
@@ -191,7 +265,16 @@ systemctl reload haproxy.service
 - Настройте фронтенд HAProxy так, чтобы в зависимости от запрашиваемого сайта example1.local или example2.local запросы перенаправлялись на разные бэкенды HAProxy
 - На проверку направьте конфигурационный файл HAProxy, скриншоты, демонстрирующие запросы к разным фронтендам и ответам от разных бэкендов.
 
--->
+[haproxy.cfg](./2/haproxy_3/haproxy.cfg)
+
+![4serv_example.local](./2/scr/tests3.png)
+
+![angie_test](./2/scr/angie_tests.png)
+
+![stats3](./2/scr/stats3.png)
+
+
+
 
 ------
 
