--- a/3.md
+++ b/3.md
@@ -42,6 +42,44 @@
 - На проверку направить скриншот с командой и результатом ее выполнения
 
 
+### Выполнение задания 1
+
+Синтаксис Rsync
+
+```
+rsync -options <source> <destination>
+```
+
+[памятка по ключам утилиты rsync](./3/rsync-help.txt)
+
+Выполним резервное копировани каталога пользователя _user_ в /tmp/backup/ :
+
+```
+ rsync -avc --delete --exclude '.*' /home/user/ /tmp/backup/
+
+```
+или, для текущего пользователя вошедшего в систему:
+
+```
+rsync -avc --delete --exclude '.*' ~/  /tmp/backup/
+```
+
+где, 
+```
+  -a, --archive – архивный режим, включает рекурсивное копирование и сохранение прав и владельца
+  -v, --verbose – вывести подробную информацию о процессе
+  -c, --checksum – использование сверки по контрольным суммам, а не по времени изменения и размеру файлов.
+  --delete – удалять файлы, которых нет в источнике
+  --exclude – исключить файлы
+```
+
+домашняя директория пользователя, и проверка каталога **_/tmp/backup_** - каталог отсутствует. 
+
+![./3/hdir1.png]
+
+запуск утилиты **_rsync_** и вывод содержимого целевого каталога **_/tmp/backup_**
+
+![](./3/rsync_tmp.png)
 
 ### Задание 2
 - Написать скрипт и настроить задачу на регулярное резервное копирование домашней директории пользователя с помощью rsync и cron.
