--- a/3.md
+++ b/3.md
@@ -75,7 +75,7 @@ rsync -avc --delete --exclude '.*' ~/  /tmp/backup/
 
 домашняя директория пользователя, и проверка каталога **_/tmp/backup_** - каталог отсутствует. 
 
-![./3/hdir1.png]
+![](./3/hdir1.png)
 
 запуск утилиты **_rsync_** и вывод содержимого целевого каталога **_/tmp/backup_**
 
