--- a/3.md
+++ b/3.md
@@ -89,6 +89,65 @@ rsync -avc --delete --exclude '.*' ~/  /tmp/backup/
 - На проверку направить файл crontab и скриншот с результатом работы утилиты.
 
 
+### Выполнения задания 2
+
+
+Резервное копирование домашней директории 
+
+```
+rsync -avc --delete --exclude '.*' ~/  /tmp/backup/
+
+```
+
+создаем скрипт ~/rsync-home.sh и выполняем по расписанию каждый день 
+
+Настройки расписания можно делать через **_crontab_**, но мы будем делать в виде отдельного файла с заданием и поместим его в каталог **_/etc/cron.d/_**
+
+Так, или иначе, строка для выполнения задания выглядит идентично: 
+
+```
+*/1  *   * * *  root   bash ~/rsync-home.sh
+```
+
+![](./3/cron_d.png)
+
+Скрипт проверяет вывод rsync, и записывает информацию в системный журнал
+
+```
+#!/bin/bash
+
+source=$HOME 
+dest='/tmp/backup/'
+
+rsync_sending=$(rsync -avc --delete --exclude '.*' $source $dest  2>&1 | sed  '/^#\|^$\| *#/d' | awk 'NR==1 {print $1}')
+
+if [ -d "$dest" ]; then
+        if [ $rsync_sending == "sending" ] ; then
+                logger "backup created Successfully";
+        else
+                logger "backup no create";
+        fi
+else
+        logger "backup dir not found";
+fi
+
+```
+
+Проверим по журналу выполнения команды по рассписанию:
+
+```
+journalctl -f
+```
+
+![rsync](./3/journalctl_cron.png)
+
+Результат выполения
+
+![rsync](./3/backup.png)
+
+----
+
+
 ---
 
 ## Задания со звёздочкой*
