--- a/3.md
+++ b/3.md
@@ -160,6 +160,43 @@ journalctl -f
 - Проверьте настройку, синхронизируя большой файл между двумя серверами
 - На проверку направьте команду и результат ее выполнения в виде скриншота
 
+### Выполнения задания 3*
+
+Выполним синхронизацию локального каталога (директория пользователя) на удаленный сервер. Удаленный сервер будет клоном ВМ, которая используется в качестве стенда.
+
+за ограничения пропускной способности rsync отвечает параметр --bwlimit
+
+```
+--bwlimit=<число> — для ограничения скорости передачи в Кбит/c
+```
+
+ограничение до 1Мбит/с будет значение = 1024КБит/с
+
+Для тестирования возможностей rsync создаем несколько файл размером 1 Gb
+
+для создания файлов используем утилиту _dd_
+
+```
+dd if=/dev/zero of=testfile_1G_1 bs=1G count=1 #файл 1 гигабайт
+
+```
+
+![ls_dir](./3/ls_dir_files=1G.png)
+
+Скорость передачи без ограничений
+
+![rsync_nolimit](./3/rsync_nolimit.png)
+
+
+```
+rsync --bwlimit=1 -avz -e "ssh" --progress ~/testfile*  root@192.168.77.118:/tmp/backup/
+```
+для наглядного сравнения, скорость ограничена до 1Kbps (1КБит/с)
+
+![rsync_limit=1Mbps](./3/rsync_limit=1K.png)
+
+
+<!--
 
 ### Задание 4*
 - Напишите скрипт, который будет производить инкрементное резервное копирование домашней директории пользователя с помощью rsync на другой сервер
@@ -174,6 +211,7 @@ journalctl -f
 1. Необходимо следовать инструкции по выполнению домашнего задания, используя для оформления репозиторий Github
 2. В ответе необходимо прикладывать требуемые материалы - скриншоты, конфигурационные файлы, скрипты. Необходимые материалы для получения зачета указаны в каждом задании.
 
+--> 
 
 ------
 
